--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -158,6 +158,7 @@
 .pk-icon-home { background-image: url("../../assets/images/icon-home.svg"); }
 .pk-icon-settings { background-image: url("../../assets/images/icon-settings.svg"); }
 .pk-icon-refresh { background-image: url("../../assets/images/icon-refresh.svg"); }
+.pk-icon-star { background-image: url("../../assets/images/icon-star.svg"); }
 
 .pk-icon-arrow-up,
 .pk-icon-arrow-down {
