cleanup location widget

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -437,7 +437,7 @@
 /* Panel Background (Dashboard)
  ========================================================================== */
 
-.pk-panel-bg {
+.pk-panel-background {
     margin: -@panel-box-padding;
     padding: @panel-box-padding;
     background: @global-primary-background;
@@ -516,7 +516,7 @@
     stroke-dasharray: @offset;
     stroke-dashoffset: 0;
     // transform-origin: center;
-    animation: pk-loader-dash @duration ease-in-out infinite, 
+    animation: pk-loader-dash @duration ease-in-out infinite,
                pk-loader-color (@duration*4) ease-in-out infinite;
     stroke-linecap: round;
 }
