updated nestable icon

--- a/app/system/modules/theme/less/uikit/nestable.less
+++ b/app/system/modules/theme/less/uikit/nestable.less
@@ -13,6 +13,9 @@
 
 @nestable-placeholder-border:                   #99baca;
 
+@nestable-toggle-icon:                          "\f0d7";
+@nestable-toggle-collapsed-icon:                "\f0da";
+
 @nestable-panel-padding:                        16px 12px;
 @nestable-panel-background:                     @global-background;
 
