--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -159,6 +159,7 @@
 .pk-icon-settings { background-image: url("../../assets/images/icon-settings.svg"); }
 .pk-icon-refresh { background-image: url("../../assets/images/icon-refresh.svg"); }
 .pk-icon-star { background-image: url("../../assets/images/icon-star.svg"); }
+.pk-icon-share { background-image: url("../../assets/images/icon-share.svg"); }
 
 .pk-icon-arrow-up,
 .pk-icon-arrow-down {
