updated themes thumbnail view markup

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -160,7 +160,6 @@
 .pk-icon-refresh { background-image: url("../../assets/images/icon-refresh.svg"); }
 .pk-icon-star { background-image: url("../../assets/images/icon-star.svg"); }
 .pk-icon-share { background-image: url("../../assets/images/icon-share.svg"); }
-.pk-icon-search { background-image: url("../../assets/images/icon-search.svg"); }
 
 .pk-icon-arrow-up,
 .pk-icon-arrow-down {
@@ -267,6 +266,15 @@
 .pk-subnav-icon > * > :hover,
 .pk-subnav-icon > * > :focus { color: @global-color; }
 
+/*
+ * Background Modifier
+ */
+
+.pk-panel-badge {
+    padding: 7px 10px;
+    background: #fff;
+    border-radius: 2px;
+}
 
 /* Sub-modifier `pk-overlay-border` (Editor, Image Picker, Post Image)
 ========================================================================== */
