updated alignment location widget

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -266,15 +266,6 @@
 .pk-subnav-icon > * > :hover,
 .pk-subnav-icon > * > :focus { color: @global-color; }
 
-/*
- * Background Modifier
- */
-
-.pk-panel-badge {
-    padding: 7px 10px;
-    background: #fff;
-    border-radius: 2px;
-}
 
 /* Sub-modifier `pk-overlay-border` (Editor, Image Picker, Post Image)
 ========================================================================== */
@@ -452,6 +443,12 @@
     padding: @panel-box-padding;
     background: @global-primary-background;
 }
+
+/*
+ * Vertical align bottom
+ */
+
+.pk-v-align-bottom { vertical-align: bottom; }
 
 
 /* Modal with IFrame (Marketplace)
