undo delete uk-panel-badge

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -266,6 +266,16 @@
 .pk-subnav-icon > * > :hover,
 .pk-subnav-icon > * > :focus { color: @global-color; }
 
+/*
+ * Background Modifier
+ */
+
+.pk-panel-badge {
+    padding: 7px 10px;
+    background: #fff;
+    border-radius: 2px;
+}
+
 
 /* Sub-modifier `pk-overlay-border` (Editor, Image Picker, Post Image)
 ========================================================================== */
