updated panel thumbnail views

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -266,6 +266,10 @@
 .pk-subnav-icon > * > :hover,
 .pk-subnav-icon > * > :focus { color: @global-color; }
 
+
+/* Panel Badge Modifiers
+========================================================================== */
+
 /*
  * Background Modifier
  */
@@ -274,6 +278,16 @@
     padding: 7px 10px;
     background: #fff;
     border-radius: 2px;
+}
+
+/*
+ * Background Modifier
+ */
+
+.pk-panel-badge-bottom-right {
+    position: absolute;
+    right: @panel-box-padding;
+    bottom: @panel-box-padding;
 }
 
 
