--- a/app/system/modules/theme/less/uikit/panel.less
+++ b/app/system/modules/theme/less/uikit/panel.less
@@ -14,7 +14,9 @@
 @panel-title-color:                             @global-color;
 @panel-title-text-transform:                    none;
 
-@panel-box-padding:                             @global-margin-large;
+@panel-teaser-margin-bottom:                    @panel-box-padding;
+
+@panel-box-padding:                             25px;
 @panel-box-background:                          #fff;
 @panel-box-color:                               @global-color;
 @panel-box-title-color:                         @global-color;
@@ -28,7 +30,7 @@
 @panel-box-secondary-color:                     @global-color;
 @panel-box-secondary-title-color:               @global-color;
 
-@panel-hover-padding:                           @global-margin-large;
+@panel-hover-padding:                           25px;
 @panel-hover-color:                             @global-color;
 @panel-hover-hover-color:                       @global-color;
 @panel-hover-hover-background:                  #fff;
