updated dashboard large text markup

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -267,7 +267,7 @@
 .pk-subnav-icon > * > :focus { color: @global-color; }
 
 
-/* Panel Badge Modifiers
+/* Panel Badge Modifiers (System Themes)
 ========================================================================== */
 
 /*
@@ -288,6 +288,15 @@
     position: absolute;
     right: @panel-box-padding;
     bottom: @panel-box-padding;
+}
+
+
+/* Text Large (Dashboard)
+========================================================================== */
+
+.pk-text-large {
+    font-size: 52px;
+    line-height: 64px;
 }
 
 
