better autocomplete dropdown width

--- a/app/system/modules/theme/less/uikit/autocomplete.less
+++ b/app/system/modules/theme/less/uikit/autocomplete.less
@@ -29,4 +29,8 @@
 // Miscellaneous
 // ========================================================================
 
-.hook-autocomplete-misc() {}
+.hook-autocomplete-misc() {
+
+	.uk-autocomplete .uk-dropdown { width: 100%; }
+
+}
