fixed location widget nav autocomplete subtitle items

--- a/app/system/modules/theme/less/uikit/autocomplete.less
+++ b/app/system/modules/theme/less/uikit/autocomplete.less
@@ -33,4 +33,11 @@
 
 	.uk-autocomplete .uk-dropdown { width: 100%; }
 
+    /*
+     * Item subtitle
+     */
+
+    .uk-nav-autocomplete li > a > span { color: @global-muted-color; }
+    .uk-nav-autocomplete li.uk-active > a > span { color: @global-contrast-color; }
+
 }
