updated all image and video picker + previews

--- a/app/system/modules/theme/less/uikit/panel.less
+++ b/app/system/modules/theme/less/uikit/panel.less
@@ -52,7 +52,10 @@
 // Sub-object: `uk-panel-badge`
 // ========================================================================
 
-.hook-panel-badge() {}
+.hook-panel-badge() {
+	top: @panel-box-badge-top;
+    right: @panel-box-badge-right;
+}
 
 
 // Modifier: `uk-panel-box`
