updated pagekit admin theme menu dropdown hover

--- a/app/system/modules/theme/less/theme.less
+++ b/app/system/modules/theme/less/theme.less
@@ -175,8 +175,10 @@ body {
 
 .tm-sortable-dragged .tm-panel-icon {
     background: @dropdown-background;
-    border: 1px solid @global-border;
+    border: 1px solid fade(@global-border, 60%);
+    box-shadow: 0 1px 4px rgba(0,0,0,0.09);
     border-radius: 3px;
+
 }
 
 
