--- a/app/system/modules/theme/less/uikit/nav.less
+++ b/app/system/modules/theme/less/uikit/nav.less
@@ -27,26 +27,26 @@
 @nav-parent-icon-width:                         @global-line-height;
 
 @nav-side-color:                                @global-color;
-@nav-side-hover-background:                     @global-default-background;
-@nav-side-hover-color:                          @global-color;
-@nav-side-active-background:                    @global-default-background;
-@nav-side-active-color:                         @global-color;
+@nav-side-hover-background:                     @global-primary-background;
+@nav-side-hover-color:                          @global-contrast-color;
+@nav-side-active-background:                    @global-primary-background;
+@nav-side-active-color:                         @global-contrast-color;
 @nav-side-header-color:                         @global-color;
 @nav-side-divider-border:                       @global-border;
 @nav-side-nested-color:                         @global-muted-color;
 @nav-side-nested-hover-color:                   @global-color;
 
 @nav-dropdown-color:                            @global-color;
-@nav-dropdown-hover-background:                 @global-default-background;
-@nav-dropdown-hover-color:                      @global-color;
+@nav-dropdown-hover-background:                 @global-primary-background;
+@nav-dropdown-hover-color:                      @global-contrast-color;
 @nav-dropdown-header-color:                     @global-color;
 @nav-dropdown-divider-border:                   @global-border;
 @nav-dropdown-nested-color:                     @global-muted-color;
 @nav-dropdown-nested-hover-color:               @global-color;
 
 @nav-navbar-color:                              @global-color;
-@nav-navbar-hover-background:                   @global-default-background;
-@nav-navbar-hover-color:                        @global-color;
+@nav-navbar-hover-background:                   @global-primary-background;
+@nav-navbar-hover-color:                        @global-contrast-color;
 @nav-navbar-header-color:                       @global-color;
 @nav-navbar-divider-border:                     @global-border;
 @nav-navbar-nested-color:                       @global-muted-color;
