cleanup primary color in loader + navbar

--- a/app/system/modules/theme/less/uikit/navbar.less
+++ b/app/system/modules/theme/less/uikit/navbar.less
@@ -7,7 +7,7 @@
 // Variables
 // ========================================================================
 
-@navbar-background:                             #3a94e0;
+@navbar-background:                             @global-primary-hover-background;
 @navbar-color:                                  @global-contrast-color;
 @navbar-link-color:                             rgba(255,255,255,0.6);
 @navbar-link-hover-color:                       @global-contrast-color;
@@ -18,11 +18,11 @@
 @navbar-nav-font-size:                          @global-font-size;
 @navbar-nav-font-weight:                        300;
 @navbar-nav-font-family:                        "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-@navbar-nav-hover-background:                   #3a94e0;
+@navbar-nav-hover-background:                   @global-primary-hover-background;
 @navbar-nav-hover-color:                        @global-contrast-color;
-@navbar-nav-onclick-background:                 #3a94e0;
+@navbar-nav-onclick-background:                 @global-primary-hover-background;
 @navbar-nav-onclick-color:                      @global-contrast-color;
-@navbar-nav-active-background:                  #3a94e0;
+@navbar-nav-active-background:                  @global-primary-hover-background;
 @navbar-nav-active-color:                       @global-contrast-color;
 
 @navbar-brand-font-size:                        @global-font-size;
