--- a/app/system/modules/theme/less/uikit/variables.less
+++ b/app/system/modules/theme/less/uikit/variables.less
@@ -36,7 +36,7 @@
 @global-default-active-background:              #ddd;
 
 @global-primary-background:                     #489be0;
-@global-primary-hover-background:               #3e91d7;
+@global-primary-hover-background:               #3a94e0;
 @global-primary-active-background:              #3589cf;
 
 @global-success-background:                     #3DC372;
