--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -557,7 +557,7 @@
 
 @keyframes pk-loader-rotate {
     0% { transform: rotate(0deg); }
-  100% { transform: rotate(270deg); }
+    100% { transform: rotate(270deg); }
 }
 
 @keyframes pk-loader-dash {
@@ -573,7 +573,7 @@
 }
 
 @keyframes pk-loader-color {
-    0% { stroke: #444; }
-    50% { stroke: #444; }
-    100% { stroke: #444; }
+    0% { stroke: @global-primary-hover-background; }
+    50% { stroke: @global-primary-hover-background; }
+    100% { stroke: @global-primary-hover-background; }
 }
