updated site pages markup

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -415,7 +415,7 @@
 
 .pk-table-fake-subheading { padding-top: 20px; }
 
-.pk-table-fake-border { border-bottom: 1px solid @global-border; }
+.pk-table-fake-border { box-shadow: inset 0 -1px 0  @global-border; }
 
 /*
  * Fix height
