--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -160,6 +160,7 @@
 .pk-icon-refresh { background-image: url("../../assets/images/icon-refresh.svg"); }
 .pk-icon-star { background-image: url("../../assets/images/icon-star.svg"); }
 .pk-icon-share { background-image: url("../../assets/images/icon-share.svg"); }
+.pk-icon-move { background-image: url("../../assets/images/icon-move.svg"); }
 
 .pk-icon-arrow-up,
 .pk-icon-arrow-down {
