cleanup site widgets markup

--- a/app/system/modules/theme/less/uikit/nav.less
+++ b/app/system/modules/theme/less/uikit/nav.less
@@ -106,7 +106,7 @@
 // Sub-object: `uk-nav-header`
 //
 
-.hook-nav-side-header() {}
+.hook-nav-side-header() { padding: 8px 16px; }
 
 //
 // Sub-object: `uk-nav-divider`
