optimized sidebar spacing and width

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -61,19 +61,21 @@
      */
 
     /* Horizontal */
-    .pk-grid-large { margin-left: -70px; }
-    .pk-grid-large > * { padding-left: 70px; }
+    .pk-grid-large { margin-left: -50px; }
+    .pk-grid-large > * { padding-left: 50px; }
 
     /* Vertical */
     .pk-grid-large + .pk-grid-large,
     .pk-grid-large > .uk-grid-margin,
-    .pk-grid-large > * > .uk-panel + .uk-panel { margin-top: 70px; }
+    .pk-grid-large > * > .uk-panel + .uk-panel { margin-top: 50px; }
 
     /*
      * Width
      */
 
-    .pk-width-sidebar { width: (250px + 70px); }
+    .pk-width-sidebar { width: (250px + 50px); }
+
+    .pk-width-sidebar-large { width: (270px + 50px); }
 
 }
 
