updated tm-headerbar alignment

--- a/app/system/modules/theme/less/theme.less
+++ b/app/system/modules/theme/less/theme.less
@@ -60,7 +60,7 @@ body {
 /* Tablet and bigger */
 @media (min-width: @breakpoint-medium) {
 
-    .tm-headerbar { height: 185px; }
+    .tm-headerbar { height: 165px; }
 
 }
 
@@ -118,7 +118,7 @@ body {
  ========================================================================== */
 
 .tm-navbar {
-    margin-top: -(@navbar-nav-height);
+    margin-top: -28px;
     margin-left: -(@navbar-nav-padding-horizontal);
 }
 
