--- a/app/system/modules/theme/less/uikit/button.less
+++ b/app/system/modules/theme/less/uikit/button.less
@@ -26,6 +26,7 @@
 @button-small-padding-horizontal:               12px;
 @button-large-padding-horizontal:               20px;
 
+@button-font-size:                              13px;
 @button-background:                             transparent;
 @button-color:                                  @global-muted-color;
 @button-hover-background:                       transparent;
