updated uikit theme

--- a/app/system/modules/theme/less/uikit/breadcrumb.less
+++ b/app/system/modules/theme/less/uikit/breadcrumb.less
@@ -7,6 +7,8 @@
 // Variables
 // ========================================================================
 
+@breadcrumb-font-size:                          12px;
+
 @breadcrumb-disabled-color:                     fade(@global-muted-color, 50%);
 @breadcrumb-divider-margin:                     12px;
 
@@ -14,11 +16,7 @@
 // Component
 // ========================================================================
 
-.hook-breadcrumb() {
-    color: @global-muted-color;
-    font-size: 12px;
-    text-transform: uppercase;
-}
+.hook-breadcrumb() {}
 
 
 // Items
@@ -31,6 +29,11 @@
 // ========================================================================
 
 .hook-breadcrumb-misc() {
+
+    .uk-breadcrumb > li {
+        color: @global-muted-color;
+        text-transform: uppercase;
+    }
 
 	.uk-breadcrumb > li > a { color: @global-muted-color; }
 	.uk-breadcrumb > li > a:hover { color: @global-color; }
