updated dashboard font classes

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -298,11 +298,16 @@
 ========================================================================== */
 
 .pk-text-large {
+    font-family:  @base-heading-font-family;
+    font-weight: 400;
+    font-size: @base-h2-font-size;
+    line-height: @base-h2-line-height;
+}
+
+.pk-text-xlarge {
     font-size: 52px;
     line-height: 64px;
 }
-
-.pk-text-bold { font-weight: 400; }
 
 
 /* Modifier `pk-table-large`
