--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -305,8 +305,9 @@
 }
 
 .pk-text-xlarge {
+    font-family:  @base-heading-font-family;
     font-size: 52px;
-    line-height: 64px;
+    line-height: 56px;
 }
 
 
