--- a/app/installer/assets/less/installer.less
+++ b/app/installer/assets/less/installer.less
@@ -14,6 +14,24 @@ html {
 }
 
 
+/* Font smoothing
+ ========================================================================== */
+
+body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+
+/* Background
+ ========================================================================== */
+
+.tm-background {
+    background: url("../../../system/modules/theme/images/login.jpg") 50% 50% no-repeat;
+    background-size: cover;
+}
+
+
 /* Layout
  ========================================================================== */
 
@@ -37,7 +55,7 @@ html {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     width: 500px;
-    padding: 25px;
+    padding: 50px;
 }
 
 
