--- a/app/installer/assets/less/installer.less
+++ b/app/installer/assets/less/installer.less
@@ -27,35 +27,18 @@ body {
  ========================================================================== */
 
 .tm-background {
-    background: url("../../../system/modules/theme/images/login.jpg") 50% 50% no-repeat;
+    background: lighten(@global-primary-background, 10%) url("../../../system/modules/theme/images/background.jpg") 50% 50% no-repeat;
     background-size: cover;
 }
 
 
-/* Layout
+/* Container
  ========================================================================== */
 
-/*
- * Slide
- */
-
-.tm-slide {
-    position: absolute;
-    top: 0;
-    left: 20px;
-    right: 20px;
-    height: 80%;
-}
-
-/*
- * Panel
- */
-
-.tm-panel {
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+.tm-container {
     width: 500px;
-    padding: 50px;
+    max-width: ~"calc(100% - 40px)";
+    padding: 20px;
 }
 
 
@@ -63,12 +46,16 @@ body {
  ========================================================================== */
 
 /* Only tablets and desktops */
-@media (min-width: 480px) {
+@media (min-width: @breakpoint-small) {
 
     .tm-form-horizontal .uk-form-label {
         width: 120px;
-        margin-top: 7px;
+        margin-top: @form-horizontal-label-margin-top;
         float: left;
+        /* Theme Reset */
+        font-size: @global-font-size;
+        line-height: @global-line-height;
+        text-transform: none;
     }
 
     .tm-form-horizontal .uk-form-controls { margin-left: 135px; }
@@ -76,16 +63,69 @@ body {
 }
 
 
+/* SVG Loader
+ ========================================================================== */
+
+@radius: 70px;
+@size: 75px; // A little larger to prevent overflow clipping
+@offset: round(2 * 3.141 * @radius);
+@duration: 1.4s;
+
+.tm-loader {
+    vertical-align: middle;
+    animation: pk-loader-rotate @duration linear infinite;
+}
+
+/*
+ * Group
+ * Only needed because `transform-origin: center` is not working in Firefox
+ */
+
+.tm-loader > * { transform: translate(@size, @size); }
+
+/*
+ * Circle
+ */
+
+.tm-loader > * > * {
+    stroke-dasharray: @offset;
+    stroke-dashoffset: 0;
+    // transform-origin: center;
+    animation: pk-loader-dash @duration ease-in-out infinite,
+               pk-loader-color (@duration*4) ease-in-out infinite;
+    stroke-linecap: round;
+}
+
+@keyframes pk-loader-rotate {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(270deg); }
+}
+
+@keyframes pk-loader-dash {
+    0% { stroke-dashoffset: @offset; }
+    50% {
+        stroke-dashoffset: @offset/4;
+        transform:rotate(135deg);
+    }
+    100% {
+        stroke-dashoffset: @offset;
+        transform:rotate(450deg);
+    }
+}
+
+@keyframes pk-loader-color {
+    0% { stroke: #fff; }
+    50% { stroke: #fff; }
+    100% { stroke: #fff; }
+}
+
+
 /* UIkit modifications
  ========================================================================== */
 
-/*
- * Icon
- */
-
-.uk-icon-large:before {
-    font-size: 800%;
-    color: #ddd;
+.uk-height-viewport {
+    height: auto;
+    min-height: 100vh;
 }
 
 /*
@@ -96,3 +136,58 @@ body {
     -webkit-animation-duration: 0.3s;
     animation-duration: 0.3s;
 }
+
+
+/*
+ * Left
+ */
+
+@-webkit-keyframes uk-fade-left {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateX(-300px);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translateX(0);
+    }
+}
+
+@keyframes uk-fade-left {
+    0% {
+        opacity: 0;
+        transform: translateX(-300px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+/*
+ * Right
+ */
+
+@-webkit-keyframes uk-fade-right {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateX(300px);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translateX(0);
+    }
+}
+
+@keyframes uk-fade-right {
+    0% {
+        opacity: 0;
+        transform: translateX(300px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+
