--- a/app/system/modules/theme/less/theme.less
+++ b/app/system/modules/theme/less/theme.less
@@ -195,7 +195,7 @@ body {
  ========================================================================== */
 
 .tm-background {
-    background: lighten(@global-primary-background, 10%) url("../images/login.jpg") 50% 50% no-repeat;
+    background: lighten(@global-primary-background, 10%) url("../images/background.jpg") 50% 50% no-repeat;
     background-size: cover;
 }
 
