--- a/app/installer/assets/less/installer.less
+++ b/app/installer/assets/less/installer.less
@@ -41,6 +41,8 @@ body {
     padding: 20px;
 }
 
+.tm-container .uk-panel { padding: 50px; }
+
 
 /* Modifier: `tm-form-horizontal`
  ========================================================================== */
