--- a/app/installer/assets/less/installer.less
+++ b/app/installer/assets/less/installer.less
@@ -165,7 +165,7 @@ body {
 .tm-checkmark {
   stroke-dashoffset: 132;
   stroke-dasharray: 132;
-  animation: tm-dash 1s ease-out infinite;
+  animation: tm-dash 1s ease-out;
 }
 
 @keyframes tm-dash {
