fixed chackmark animation in installer

--- a/app/installer/assets/less/installer.less
+++ b/app/installer/assets/less/installer.less
@@ -165,10 +165,10 @@ body {
 .tm-checkmark {
   stroke-dashoffset: 132;
   stroke-dasharray: 132;
-  animation: tm-dash 1s ease-out;
+  animation: tm-checkmark 1s ease-out forwards;
 }
 
-@keyframes tm-dash {
+@keyframes tm-checkmark {
     0% { stroke-dashoffset: 132; }
     100% { stroke-dashoffset: 0; }
 }
