added icon-large + updated system icons

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -211,6 +211,24 @@
 .pk-icon-contrast.pk-icon-edit { background-image: url("../../assets/images/icon-edit-contrast.svg"); }
 
 /*
+ * Icon Large
+ */
+
+[class*='pk-icon-large-'] {
+    width: 25px;
+    height: 25px;
+}
+
+.pk-icon-large-system { background-image: url("../../assets/images/icon-large-system.svg"); }
+.pk-icon-large-localization { background-image: url("../../assets/images/icon-large-localization.svg"); }
+.pk-icon-large-mail { background-image: url("../../assets/images/icon-large-mail.svg"); }
+.pk-icon-large-cache { background-image: url("../../assets/images/icon-large-cache.svg"); }
+.pk-icon-large-server { background-image: url("../../assets/images/icon-large-server.svg"); }
+.pk-icon-large-lock-file { background-image: url("../../assets/images/icon-large-lock-file.svg"); }
+.pk-icon-large-database { background-image: url("../../assets/images/icon-large-database.svg"); }
+.pk-icon-large-code { background-image: url("../../assets/images/icon-large-code.svg"); }
+
+/*
  * Link Hover with Icon and Text
  */
 
