code editor wrapper

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -610,3 +610,12 @@
     50% { stroke: @global-primary-hover-background; }
     100% { stroke: @global-primary-hover-background; }
 }
+
+/* Editor
+========================================================================== */
+
+.pk-editor {
+    padding: 20px;
+    background: @global-contrast-color;
+    border: 1px solid @global-border;
+}
