updated system icons

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -224,9 +224,10 @@
 .pk-icon-large-mail { background-image: url("../../assets/images/icon-large-mail.svg"); }
 .pk-icon-large-cache { background-image: url("../../assets/images/icon-large-cache.svg"); }
 .pk-icon-large-server { background-image: url("../../assets/images/icon-large-server.svg"); }
-.pk-icon-large-lock-file { background-image: url("../../assets/images/icon-large-lock-file.svg"); }
-.pk-icon-large-database { background-image: url("../../assets/images/icon-large-database.svg"); }
 .pk-icon-large-code { background-image: url("../../assets/images/icon-large-code.svg"); }
+.pk-icon-large-database { background-image: url("../../assets/images/icon-large-database.svg"); }
+.pk-icon-large-lock-file { background-image: url("../../assets/images/icon-large-lock-file.svg"); }
+.pk-icon-large-comment { background-image: url("../../assets/images/icon-large-comment.svg"); }
 
 /*
  * Link Hover with Icon and Text
