updated uikit theme

--- a/app/system/modules/theme/less/uikit/nav.less
+++ b/app/system/modules/theme/less/uikit/nav.less
@@ -31,7 +31,7 @@
 @nav-side-hover-color:                          @global-color;
 @nav-side-active-background:                    @global-default-background;
 @nav-side-active-color:                         @global-color;
-@nav-side-header-color:                         @global-color;
+@nav-side-header-color:                         @global-muted-color;
 @nav-side-divider-border:                       @global-border;
 @nav-side-nested-color:                         @global-muted-color;
 @nav-side-nested-hover-color:                   @global-color;
