updated pk-editor CSS

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -616,7 +616,7 @@
 ========================================================================== */
 
 .pk-editor {
-    padding: 20px;
-    background: @global-contrast-color;
-    border: 1px solid @global-border;
+    padding: @form-padding;
+    border: @form-border-width solid @form-border;
+    background: @form-background;
 }
