--- a/app/system/modules/finder/app/templates/thumbnail.html
+++ b/app/system/modules/finder/app/templates/thumbnail.html
@@ -1,5 +1,5 @@
 <ul v-if="items.length" class="uk-grid uk-grid-medium uk-grid-match uk-grid-width-small-1-2 uk-grid-width-large-1-3 uk-grid-width-xlarge-1-4" data-uk-grid-margin>
-    <li v-repeat="items | folders | searched" v-on="click: toggleSelect">
+    <li v-repeat="folders | searched" v-on="click: toggleSelect">
         <div class="uk-panel uk-panel-box uk-text-center">
             <div class="uk-panel-teaser uk-position-relative">
                 <div class="uk-cover-background uk-position-cover pk-thumbnail-folder"></div>
@@ -12,7 +12,7 @@
         </div>
     </li>
 
-    <li v-repeat="items | files | searched" v-on="click: toggleSelect">
+    <li v-repeat="files | searched" v-on="click: toggleSelect">
         <div class="uk-panel uk-panel-box uk-text-center">
             <div class="uk-panel-teaser uk-position-relative">
                 <div class="uk-cover-background uk-position-cover" v-if="isImage(path)" style="background-image: url('{{ encodeURI(url) }}');"></div>
