updated dropdown hover

--- a/app/system/modules/theme/less/theme.less
+++ b/app/system/modules/theme/less/theme.less
@@ -149,7 +149,7 @@ body {
     text-align: center;
 }
 
-.tm-panel-icon:hover { color: @global-muted-color; }
+.tm-panel-icon:hover { color: @global-link-color; }
 
 .tm-panel-icon > p {
     margin-top: 10px;
